fix vim key bindings for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ bind-key C-f send-prefix
 
 # enable vi key bindings for scrolling
 # after mod + pageUp, j+k can be used
-set-window-option mode-keys vi
+set-window-option -g mode-keys vi
 
 # split panes using | and - instead of " and %
 bind | split-window -h
