--- a/i3.config
+++ b/i3.config
@@ -3,17 +3,19 @@
 #
 # Should you change your keyboard layout some time, delete
 # this file and re-run i3-config-wizard(1).
-#
 
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
 set $mod Mod4
+
+# Run the following commands on startup
+exec --no-startup-id st
+exec --no-startup-id exec xset r rate 200
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -21,6 +23,25 @@ font pango:monospace 8
 ### Custom Fonts ###
 # font pango:Monospace 15
 font pango:Source Code Pro 15
+
+# Set Xresources colors:
+set_from_resource $darkblack	color0  #000000
+set_from_resource $black	    color8  #000000
+set_from_resource $darkred	    color1  #000000
+set_from_resource $red		    color9  #000000
+set_from_resource $darkgreen	color2  #000000
+set_from_resource $green	    color10 #000000
+set_from_resource $darkyellow	color3  #000000
+set_from_resource $yellow	    color11 #000000
+set_from_resource $darkblue	    color4  #000000
+set_from_resource $blue		    color12 #000000
+set_from_resource $darkmagenta	color5  #000000
+set_from_resource $magenta	    color13 #000000
+set_from_resource $darkcyan	    color6  #000000
+set_from_resource $cyan		    color14 #000000
+set_from_resource $darkwhite	color7  #000000
+set_from_resource $white	    color15 #000000
+set $transparent #00000000
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -167,8 +188,20 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
-        status_command i3status
+	font pango:Source Code Pro 12
+	colors {
+			background $darkblack
+			statusline $darkwhite
+			separator $cyan
+			focused_workspace  $blue $darkblue $darkblack
+        		active_workspace   $blue $blue $darkwhite
+      			inactive_workspace $darkblack $darkblack $white
+        		urgent_workspace   $darkblack $darkblack $white
+		}
+	status_command i3status
+	position top
+	mode dock
+	modifier None
 }
