--- a/i3.config
+++ b/i3.config
@@ -3,7 +3,8 @@
 set $mod Mod4
 
 # Run the following command(s) on startup
-exec --no-startup-id exec xset r rate 200
+exec --no-startup-id exec xset r rate 200 50
+exec --no-startup-id exec xsetroot -solid "#000000"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
