--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ bind -n M-Down select-pane -D
 # Enable mouse mode (tmux >=2.1)
 set -g mouse on
 
-# hot reload of this config file 
+# hot reload of this config file
 bind r source-file ~/.tmux.conf
 
 ##############
@@ -80,3 +80,7 @@ setw -g window-status-bell-bg colour1
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour220
+
+# hit mod ü [ to enter copy mode, then space and whatever vi movements
+# to make a selection; y copies the selection to the system clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
