remap tmux scroll mode to mod+k

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,25 @@ bind-key C-f send-prefix
 
 # enable vi key bindings for scrolling
 # after mod + pageUp, j+k can be used
+# only works for version >= 2.4, though
+# (https://stackoverflow.com/questions/51639540/tmux-scroll-mode-vim-keybindings)
 set-window-option -g mode-keys vi
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# bind Pageup (without prefix) to entering scroll mode
+# prefix+k scrolls (vim-like) up without the need to
+# press Pageup to enter scroll mode
+bind -n Pageup copy-mode -u
+bind k copy-mode -u
+
+# unbind the last key binding (prefix+k for scrolling)
+# in regular and root key tables (e.g. if it gets too
+# annoying)
+#unbind-key k
+#unbind-key -T root k
 
 # split panes using | and - instead of " and %
 bind | split-window -h
