add ENV for rust

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,9 @@ unbind C-b
 set-option -g prefix C-f
 bind-key C-f send-prefix
 
-# enable vi key bindings for scrolling
-# after mod + pageUp, j+k can be used
-# only works for version >= 2.4, though
+# enable vi key bindings for scrolling after mod + pageUp,
+# j+k can be used only works for version >= 2.4, though
 # (https://stackoverflow.com/questions/51639540/tmux-scroll-mode-vim-keybindings)
-set-window-option -g mode-keys vi
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
