--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,14 @@
+#######################
+#** General Configs **#
+#######################
 # remap modifier key from C-b to C-f
 unbind C-b
 set-option -g prefix C-f
 bind-key C-f send-prefix
+
+# automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
 
 # enable vi key bindings for scrolling after mod + pageUp,
 # j+k can be used only works for version >= 2.4, though
@@ -12,16 +19,10 @@ bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # bind Pageup (without prefix) to entering scroll mode
-# prefix+k scrolls (vim-like) up without the need to
+# prefix+l scrolls (vim-like) up without the need to
 # press Pageup to enter scroll mode
 bind -n Pageup copy-mode -u
-bind k copy-mode -u
-
-# unbind the last key binding (prefix+k for scrolling)
-# in regular and root key tables (e.g. if it gets too
-# annoying)
-#unbind-key k
-#unbind-key -T root k
+bind l copy-mode -u
 
 # split panes using | and - instead of " and %
 bind | split-window -h
@@ -43,10 +44,9 @@ set -g mouse on
 bind r source-file ~/.tmux.conf
 
 ##############
-### DESIGN ###
+#** Design **#
 ##############
-
-# loud or quiet?
+# disable visual bell, etc.
 set-option -g visual-activity off
 set-option -g visual-bell off
 set-option -g visual-silence off
@@ -68,25 +68,27 @@ set -g pane-active-border-bg default
 set -g pane-active-border-fg colour220
 
 # statusbar
+# tmux colors: https://superuser.com/questions/285381/how-does-the-tmux-color-palette-work
+set -g status-interval 30 # refresh every 30s
 set -g status-position bottom
 set -g status-justify left
-set -g status-bg colour27
+set -g status-bg colour232 # this is black
 set -g status-fg colour137
 set -g status-attr dim
-set -g status-left ''
-set -g status-right '#[fg=colour255,bg=colour21,bold] %d/%m #[fg=colour255,bg=colour19,bold] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 20
+set -g status-left '#[fg=colour232,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour232] '
+set -g status-right '#[fg=colour112,bg=colour232] #[fg=colour234,bg=colour64] %d/%m | %H:%M '
+set -g status-right-length 150
+set -g status-left-length 30
 
-setw -g window-status-current-fg colour1
-setw -g window-status-current-bg colour19
+setw -g window-status-current-fg colour232
+setw -g window-status-current-bg colour64
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-current-format ' #I:#W '
 
-setw -g window-status-fg colour1
-setw -g window-status-bg colour21
+setw -g window-status-fg colour234
+setw -g window-status-bg colour240
 setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I:#W '
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
@@ -96,7 +98,3 @@ setw -g window-status-bell-bg colour1
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour220
-
-# hit mod ü [ to enter copy mode, then space and whatever vi movements
-# to make a selection; y copies the selection to the system clipboard
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
