--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,12 @@ bind-key C-f send-prefix
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+# Enable mouse mode (tmux >=2.1)
+set -g mouse on
+
+# hot reload of this config file
+bind r source-file ~/.tmux.conf
+
 # enable vi key bindings for scrolling after mod + pageUp,
 # j+k can be used only works for version >= 2.4, though
 # (https://stackoverflow.com/questions/51639540/tmux-scroll-mode-vim-keybindings)
@@ -18,6 +24,9 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+####################
+#** Key Bindings **#
+####################
 # bind Pageup (without prefix) to entering scroll mode
 # prefix+l scrolls (vim-like) up without the need to
 # press Pageup to enter scroll mode
@@ -36,12 +45,6 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
-
-# Enable mouse mode (tmux >=2.1)
-set -g mouse on
-
-# hot reload of this config file
-bind r source-file ~/.tmux.conf
 
 ##############
 #** Design **#
@@ -76,7 +79,7 @@ set -g status-bg colour232 # this is black
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left '#[fg=colour232,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour232] '
-set -g status-right '#[fg=colour112,bg=colour232] #[fg=colour234,bg=colour64] %d/%m | %H:%M '
+set -g status-right '#[fg=colour112,bg=colour232] #[fg=colour234,bg=colour64] #S | %d/%m | %H:%M '
 set -g status-right-length 150
 set -g status-left-length 30
 
