--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,6 +72,7 @@ set -g pane-active-border-fg colour220
 
 # statusbar
 # tmux colors: https://superuser.com/questions/285381/how-does-the-tmux-color-palette-work
+# scripts that are called by the statusbar must be executable!
 set -g status-interval 30 # refresh every 30s
 set -g status-position bottom
 set -g status-justify left
@@ -79,7 +80,7 @@ set -g status-bg colour232 # this is black
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left '#[fg=colour232,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour232] '
-set -g status-right '#[fg=colour112,bg=colour232] #[fg=colour234,bg=colour64] #S | %d/%m | %H:%M '
+set -g status-right '#[fg=colour112,bg=colour232] #[fg=colour234,bg=colour64] #S | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
 set -g status-right-length 150
 set -g status-left-length 30
 
