--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,11 +76,11 @@ set -g pane-active-border-fg colour220
 set -g status-interval 30 # refresh every 30s
 set -g status-position bottom
 set -g status-justify left
-set -g status-bg colour232 # this is black
+set -g status-bg colour16 # == terminal background
 set -g status-fg colour137
 set -g status-attr dim
-set -g status-left '#[fg=colour232,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour232] '
-set -g status-right '#[fg=colour112,bg=colour232] #[fg=colour234,bg=colour64] #S | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
+set -g status-left '#[fg=colour233,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour16] '
+set -g status-right '#[fg=colour112,bg=colour16] #[fg=colour234,bg=colour64] #S | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
 set -g status-right-length 150
 set -g status-left-length 30
 
