add icon to tmux statusbar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,7 +80,7 @@ set -g status-bg colour16 # == terminal background
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left '#[fg=colour233,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour16] '
-set -g status-right '#[fg=colour112,bg=colour16] #[fg=colour234,bg=colour64] #S | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
+set -g status-right '#[fg=colour112,bg=colour16] #[fg=colour234,bg=colour64] #S | #(~/bin/tmux_du) | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
 set -g status-right-length 150
 set -g status-left-length 30
 
