fix tmux configs using new -style options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,47 +58,32 @@ set-option -g bell-action none
 
 # modes
 setw -g clock-mode-colour colour2
-setw -g mode-attr bold
-setw -g mode-fg colour232
-setw -g mode-bg colour220
+setw -g mode-style fg=colour232,bg=colour220,bold
 
 # panes
 # border width cannot be changed since tmux draws
 # everything with characters
-set -g pane-border-bg default
-set -g pane-border-fg colour220
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour220
+set -g pane-border-style fg=colour220,bg=default
+set -g pane-active-border-style fg=colour220,bg=default
 
 # statusbar
 # tmux colors: https://superuser.com/questions/285381/how-does-the-tmux-color-palette-work
 # scripts that are called by the statusbar must be executable!
-set -g status-interval 30 # refresh every 30s
+set -g status-style fg=colour137,bg=colour16
+set -g status-interval 30
 set -g status-position bottom
 set -g status-justify left
-set -g status-bg colour16 # == terminal background
-set -g status-fg colour137
-set -g status-attr dim
-set -g status-left '#[fg=colour233,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour196,bg=colour16] '
-set -g status-right '#[fg=colour112,bg=colour16] #[fg=colour234,bg=colour64] #S | #(~/bin/tmux_du) | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
+
+set -g status-left '#[fg=colour233,bg=colour124] ♥ #(~/bin/bty --short) #[fg=colour124,bg=colour16] '
+set -g status-right '#[fg=colour64,bg=colour16] #[fg=colour234,bg=colour64] #S | #(~/bin/tmux_du) | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
 set -g status-right-length 150
 set -g status-left-length 30
 
-setw -g window-status-current-fg colour232
-setw -g window-status-current-bg colour64
-setw -g window-status-current-attr bold
+setw -g window-status-current-style fg=colour232,bg=colour64,bold
 setw -g window-status-current-format ' #I:#W '
-
-setw -g window-status-fg colour234
-setw -g window-status-bg colour240
-setw -g window-status-attr none
+setw -g window-status-style fg=colour234,bg=colour240,none
 setw -g window-status-format ' #I:#W '
-
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style fg=colour255,bg=colour1,bold
 
 # messages
-set -g message-attr bold
-set -g message-fg colour232
-set -g message-bg colour220
+set -g message-style fg=colour232,bg=colour220,bold
