tmux.conf: keep directory when opening new pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,8 @@ bind -n Pageup copy-mode -u
 bind l copy-mode -u
 
 # split panes using | and - instead of " and %
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
