update tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,6 +46,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# left-cycle through panes vim-like
+bind -T prefix l select-pane -R
+
 ##############
 #** Design **#
 ##############
