update plugins, add mypy to python linters

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
 #######################
 #** General Configs **#
 #######################
+# have escape being recognized immediately
+set -s escape-time 0
+
 # remap modifier key from C-b to C-f
 unbind C-b
 set-option -g prefix C-f
@@ -48,6 +51,7 @@ bind -n M-Down select-pane -D
 
 # left-cycle through panes vim-like
 bind -T prefix l select-pane -R
+bind -T prefix h select-pane -L
 
 ##############
 #** Design **#
