simplify vimrc a little

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ bind-key C-f send-prefix
 # automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
+set-option -g history-limit 10000
 
 # Enable mouse mode (tmux >=2.1)
 set -g mouse on
@@ -49,9 +50,11 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# left-cycle through panes vim-like
+# cycle through panes with vim-like bindings
 bind -T prefix l select-pane -R
 bind -T prefix h select-pane -L
+bind -T prefix k select-pane -U
+bind -T prefix j select-pane -D
 
 ##############
 #** Design **#
