--- a/.tmux.conf
+++ b/.tmux.conf
@@ -85,7 +85,7 @@ set -g status-position bottom
 set -g status-justify left
 
 set -g status-left '#[fg=colour232,bg=colour52] ♥ #(~/bin/bty --short) #[fg=colour52,bg=colour16] '
-set -g status-right '#[fg=colour2,bg=colour16] #[fg=colour232,bg=colour2] #S | #(~/bin/tmux_du) | ♫ #(~/bin/tmux_music) | %d/%m | %H:%M '
+set -g status-right '#[fg=colour2,bg=colour16] #[fg=colour232,bg=colour2] #S | #(~/bin/tmux_du) | ♫ #(~/bin/tmux_music) | %d/%m/%y | %H:%M '
 set -g status-right-length 150
 set -g status-left-length 30
 
